--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "license": "MIT",
   "main": "dist/kamasi.js",
   "scripts": {
-    "build": "rollup -c",
+    "coverage": "jest --coverage",
     "pretest": "rollup -c",
+    "test": "jest",
+    "build": "rollup -c",
     "lint": "eslint src test"
   },
   "repository": {
@@ -20,6 +22,7 @@
   "homepage": "https://github.com/vegardege/kamasi#readme",
   "devDependencies": {
     "eslint": "^7.17.0",
+    "jest": "^26.6.3",
     "rollup": "^2.36.1",
     "rollup-plugin-terser": "^7.0.2"
   }
