--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,48 @@
+# Dependencies
+node_modules/
+package-lock.json
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Editor directories and files
+.vscode/*
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
-coverage
-dist
-node_modules
+
+# OS files
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Temporary files
+*.tmp
+.cache/
+.temp/
+
+# Optional npm cache
+.npm
+
+# Optional eslint cache
+.eslintcache
