--- a/package.json
+++ b/package.json
@@ -4,13 +4,26 @@
   "description": "Music theory library",
   "author": "Vegard Egeland",
   "license": "MIT",
-  "main": "dist/kamasi.js",
+  "type": "module",
+  "main": "./src/index.js",
+  "imports": {
+    "#src/*": "./src/*",
+    "#data/*": "./data/*"
+  },
+  "exports": {
+    ".": "./src/index.js",
+    "./interval": "./src/interval.js",
+    "./note": "./src/note.js",
+    "./notelist": "./src/notelist.js",
+    "./search": "./src/search.js",
+    "./data/intervals": "./data/intervals.js",
+    "./data/scales": "./data/scales.js",
+    "./data/chords": "./data/chords.js"
+  },
   "scripts": {
-    "coverage": "jest --coverage",
-    "pretest": "rollup -c",
-    "test": "jest",
-    "build": "rollup -c",
-    "lint": "eslint src test"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "lint": "eslint src test data"
   },
   "repository": {
     "type": "git",
@@ -20,10 +33,13 @@
     "url": "https://github.com/vegardege/kamasi/issues"
   },
   "homepage": "https://github.com/vegardege/kamasi#readme",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
-    "eslint": "^7.17.0",
-    "jest": "^26.6.3",
-    "rollup": "^2.36.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.38.0",
+    "globals": "^15.14.0",
+    "jest": "^29.7.0"
   }
 }
