--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "./data/chords": "./data/chords.js"
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint src test data"
   },
   "repository": {
@@ -40,6 +41,6 @@
     "@eslint/js": "^9.17.0",
     "eslint": "^9.38.0",
     "globals": "^15.14.0",
-    "jest": "^29.7.0"
+    "vitest": "^4.0.1"
   }
 }
