--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "lint": "eslint src test data"
+    "lint": "biome lint"
   },
   "repository": {
     "type": "git",
@@ -38,9 +38,7 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "eslint": "^9.38.0",
-    "globals": "^15.14.0",
+    "@biomejs/biome": "^2.2.7",
     "vitest": "^4.0.1"
   }
 }
