--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.7",
     "@types/node": "^24.9.1",
+    "@vitest/coverage-v8": "^4.0.1",
     "typescript": "^5.9.3",
     "vitest": "^4.0.1"
   }
