Add `typedoc` documentation generation

--- a/package.json
+++ b/package.json
@@ -68,8 +68,14 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "lint": "biome lint",
-    "format": "biome format --write"
+		"check": "biome check .",
+		"check:fix": "biome check . --write",
+		"lint": "biome lint .",
+		"lint:fix": "biome lint . --write",
+		"format": "biome format .",
+		"format:fix": "biome format . --write",
+    "docs": "typedoc",
+    "docs:watch": "typedoc --watch"
   },
   "repository": {
     "type": "git",
@@ -86,6 +92,7 @@
     "@biomejs/biome": "^2.2.7",
     "@types/node": "^24.9.1",
     "@vitest/coverage-v8": "^4.0.1",
+    "typedoc": "^0.28.14",
     "typescript": "^5.9.3",
     "vitest": "^4.0.1"
   }
