--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kamasi",
-  "version": "0.2.0",
-  "description": "Music theory library for working with notes, intervals, scales, and chords",
+  "version": "0.3.0",
+  "description": "Music theory library",
   "keywords": [
     "music",
     "music-theory",
@@ -11,15 +11,14 @@
     "interval",
     "note",
     "pitch",
-    "harmony",
     "transpose"
   ],
   "author": "Vegard Egeland",
   "license": "MIT",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/src/index.js",
+  "module": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "files": [
     "dist"
   ],
@@ -30,36 +29,36 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "types": "./dist/src/index.d.ts",
+      "default": "./dist/src/index.js"
     },
     "./interval": {
-      "types": "./dist/interval.d.ts",
-      "default": "./dist/interval.js"
+      "types": "./dist/src/interval.d.ts",
+      "default": "./dist/src/interval.js"
     },
     "./note": {
-      "types": "./dist/note.d.ts",
-      "default": "./dist/note.js"
+      "types": "./dist/src/note.d.ts",
+      "default": "./dist/src/note.js"
     },
     "./notelist": {
-      "types": "./dist/notelist.d.ts",
-      "default": "./dist/notelist.js"
+      "types": "./dist/src/notelist.d.ts",
+      "default": "./dist/src/notelist.js"
     },
     "./search": {
-      "types": "./dist/search.d.ts",
-      "default": "./dist/search.js"
+      "types": "./dist/src/search.d.ts",
+      "default": "./dist/src/search.js"
     },
     "./data/intervals": {
-      "types": "./dist/intervals.d.ts",
-      "default": "./dist/intervals.js"
+      "types": "./dist/data/intervals.d.ts",
+      "default": "./dist/data/intervals.js"
     },
     "./data/scales": {
-      "types": "./dist/scales.d.ts",
-      "default": "./dist/scales.js"
+      "types": "./dist/data/scales.d.ts",
+      "default": "./dist/data/scales.js"
     },
     "./data/chords": {
-      "types": "./dist/chords.d.ts",
-      "default": "./dist/chords.js"
+      "types": "./dist/data/chords.d.ts",
+      "default": "./dist/data/chords.js"
     }
   },
   "scripts": {
@@ -68,12 +67,12 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-		"check": "biome check .",
-		"check:fix": "biome check . --write",
-		"lint": "biome lint .",
-		"lint:fix": "biome lint . --write",
-		"format": "biome format .",
-		"format:fix": "biome format . --write",
+    "check": "biome check .",
+    "check:fix": "biome check . --write",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint . --write",
+    "format": "biome format .",
+    "format:fix": "biome format . --write",
     "docs": "typedoc",
     "docs:watch": "typedoc --watch"
   },
